--- a/scss/gridbox-form.scss
+++ b/scss/gridbox-form.scss
@@ -1,3 +1,5 @@
+@import '_variables.scss';
+
 /* Avoid accident click event caused by finger touch */
 
 a,
@@ -34,6 +36,7 @@ form {
     padding: 15px;
     margin-bottom: 15px;
     background: #fff;
+    color: $fontColor;
     border: 4px solid rgba(0, 0, 0, 0.1);
     border-bottom: none;
 
@@ -87,45 +90,42 @@ form {
  *========================================================================
  */
 
- $inputBorderColor: rgba(0, 0, 0, 0.15);
- $inputBoxShadow: 1px 1px 2px rgba(0, 0, 0, 0.05);
- $inputPlaceholderColor: rgba(0, 0, 0, 0.35);
-
- $optionBottomBorder: rgba(0,0,0, 0.1);
- $caretColor: #495057;
-
 .form-input {
     display: block;
     position: relative;
     width: 100%;
     padding: 0.5rem 0.75rem;
-    color: #495057;
-    font-size: 1rem;
-    line-height: 1.5rem;
-    border: 1px solid $inputBorderColor;  
+    color: $fontColor;
+    font-size: $inputFontSize;
+    line-height: $inputLineHeight;
+    border: 1px solid $border;  
     transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.25s;
 
     &:focus {
-        border-color: #80bdff;
-        box-shadow: $inputBoxShadow;
+        border-color: $information;
+        box-shadow: 1px 1px 2px $boxShadow;
         outline: none;
     }
 
     &::placeholder {
-        color: $inputPlaceholderColor;
+        color: $disabled;
     }
 }
 
+// Form Checkbox
+// Description: set a larger space between the checkbox and text
+// Usage: applied to <input> element only with a typle of checkbox, ex: <input type="checkbox" class="form-check">
+// NOTE:  it's important to wrap input with this class by a <label> with a .label-inline class
+.form-check {
+    margin-right: 0.25rem;
+}
+
+// Textarea
+// Description: only allow vertical resize, horizontal size can be styled by using a grid class, ex: col-3
 textarea {
     overflow: auto;
     resize: vertical;
 }
-
-/* Select Box */
-/* Note: Select element sits inside a .selectWrapper class, there is also a span element act as the caret;
-   the .selectWrapper element and the .caret have a z-index of 1, the select element has z-index of 2;
-   the select has a transparent background, so it won't cover the care beneath it
-*/
 
 /* =======================================================================
  *                          Select Element, <select>
@@ -153,7 +153,7 @@ select {
     appearance: none;
     border-radius: 0;
     background: transparent !important;
-    z-index: 2; /* make it top layer */
+    z-index: 2; // make it top layer
 
     &:hover {
         cursor: pointer;
@@ -198,7 +198,7 @@ select {
 
         option {
             padding: 0.5rem 0;
-            border-bottom: 1px solid $optionBottomBorder;
+            border-bottom: 1px solid $border;
     
             &:first-child {
                 margin-top: -0.5rem;
@@ -212,274 +212,350 @@ select {
     }
 }
 
-/* Label & Legend */
-.label-col,
-.label-inline {
+/* =======================================================================
+ *                  Labeling Class, <label> and <legend>
+ * -----------------------------------------------------------------------
+ * Description:    two classes associated with the <label> element, 
+ *                  (a) .label-col
+ *                  (b) .label-inline
+ *                 they are indentical, just make the name more self
+ *                 descriptive. The two classes will normalize the size
+ *                 of <label> with element has .form-input class for a
+ *                 proper aligning result
+ * -----------------------------------------------------------------------
+ * Ussage:         (a) .label-col: applied to <label> with a grid class
+ *                 (b) .label-inline: applied to block level <label>
+ *========================================================================
+ */
+
+.label-col {
     display: inline-block;
-    padding-top: calc(0.5rem + 1px);
+    padding-top: calc(0.5rem + 1px); // add 1px to paddng because .form-input element has 1px border
     padding-right: 0.75rem;
-    padding-bottom: calc(0.5rem + 1px);
+    padding-bottom: calc(0.5rem + 1px); // add 1px to paddng because .form-input element has 1px border
     padding-left: 0;
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: $inputFontSize;
+    line-height: $inputLineHeight;
+}
+
+.label-inline {
+    @extend .label-col;
+    margin-bottom: 0.35rem;
+}
+
+// Disabled Input
+// Description: used if <label> is used to wrap the .form-input element
+// Usage: apply to <label> if <label> wraps input element
+//        or apply to elements with .form-input class directly
+.disabled {
+    color: $disabled;
+    cursor: not-allowed;
 }
 
 legend {
     padding: 0.5rem 1.5rem 0.5rem 0;
-    /* margin-bottom: 15px; */
+    // margin-bottom: 15px;
 }
 
-/* Disabled Input */
-.disabled {
-    color: #868e96;
-    cursor: not-allowed;
-}
+/* =======================================================================
+ *                          Button Styling
+ * -----------------------------------------------------------------------
+ * Description:    Remove the browser default styling, and apply gridbox
+ *                 button styling. Also provide button color options
+ *                  (a) .btn-primary
+ *                  (b) .btn-secondary
+ *                  (c) .btn-success
+ *                  (d) .btn-warning
+ *                  (e) .btn-danger
+ *                  (f) .btn-info
+ * -----------------------------------------------------------------------
+ * Ussage:         Can be applied to the belowing elements
+ *                 (a) <button class="btn btn-parimary">
+ *                 (b) <a class="btn btn-parimary">
+ *========================================================================
+ */
 
-/* Buttons */
+// Global button setting
 button {
+    // Remove browser default styling
     -webkit-appearance: none;
     -moz-appearance: none;
+
+    &.btn {
+        padding: 0.5rem 0.75rem;
+        font-size: 1rem;
+        box-shadow: $btnDefaultBoxShadow;
+        transition: background-color ease-in-out 0.15s, border-color ease-in-out 0.15s;
+    
+        &:hover,
+        &:focus,
+        &:active {
+            outline: none;
+            cursor: pointer;
+        }
+
+        &:active {
+            box-shadow: $btnInsetBoxShadow;
+            transform: translate(1px, 1px);
+        }
+    }
 }
 
-button, .btn {
-    padding: 0.5rem 0.75rem;
-    font-size: 1rem;
-    background-color: #fff;
-    border: none;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
-    transition: background-color ease-in-out 0.15s, border-color ease-in-out 0.15s;
+// Applied to <a> element
+a {
+    display: inline-block;
+
+    &.btn {
+        @extend button.btn;
+    }   
 }
 
-button:hover,
-button:focus,
-button:active {
-    outline: none;
-    cursor: pointer;
-}
-
-button:active {
-    box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.5);
-    transform: translate(1px, 1px);
-}
-
+// Primary Button Setting
 .btn-primary {
     color: #fff;
-    background-color: #007bff;
-    border: 1px solid #007bff;
+    background-color: $information;
+    border: 1px solid $information;
+
+    &:hover,
+    &:active {
+        background-color: $informationDarker;
+        border-color: $informationDarker;
+    }
 }
 
-.btn-primary:hover,
-.btn-primary:active {
-    background-color: #0069d9;
-    border-color: #0062cc;
+// Secondary Button Setting
+// Description: use to primary background color for hover and active state
+.btn-secondary {
+    color: $information;
+    background-color: #fff;
+    border: 1px solid $information;
+
+    &:hover,
+    &:active {
+        color: #fff;
+        background-color: $informationDarker;
+        border-color: $informationDarker;
+    }
 }
 
-/* Form Checkbox */
-.form-check {
-    margin-right: 0.25rem;
-}
-
-/* Custom Form Checkbox - FontAwsome - Style 1 */
-
-.custom-form-check,
-.custom-form-check-icon,
-.custom-form-check-icon i,
-.custom-form-check-content,
-.custom-form-check-icon-checked,
-.custom-form-check-icon-unchecked {
-    display: inline-block;
-    position: relative;
-    line-height: 1.5rem;
-    vertical-align: middle;
-}
-
-.custom-form-check:hover {
-    cursor: pointer;
-}
-
-.custom-form-check-icon {
-    margin-right: 0.25rem;
-}
-
-.hidden-default-check {
-    position: absolute;
-    left: 0.75rem;
-    pointer-events: none;
-    user-select: none;
-    opacity: 0;
-    z-index: -1;
-}
-
-.custom-form-check-icon-unchecked{
-    top: -1px;
-}
-
-.custom-form-check-icon-checked {
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-}
-
-.hidden-default-check:checked + span .custom-form-check-icon-unchecked {
-    opacity: 0;
-}
-
-.hidden-default-check:checked + span .custom-form-check-icon-checked {
-    opacity: 1;
-}
-
-.hidden-default-check:focus + span .custom-form-check-icon-unchecked {
-    color: #007bff;
-}
-
-.hidden-default-check:focus:checked + span .custom-form-check-icon-checked {
-    color: #007bff;
-}
-
-/* alternative style 1 */
-.custom-form-check-alt {
-    display: inline-block;
-    position: relative;
-    min-height: 1.5rem;
-    line-height: 1.5rem;
-}
-
-.custom-form-check-alt:hover {
-    cursor: pointer;
-}
-
-.custom-form-check-alt.disabled:hover {
-    cursor: not-allowed;
-}
-
-.custom-for-check-icon-alt {
-    display: block;
-    position: absolute;
-    width: 1.1rem;
-    height: 1.1rem;
-    top: 50%;
-    transform: translateY(-50%);
-    background: transparent;
-    border-radius: 4px;
-    border: 2px solid #000000;
-}
-
-.custom-form-check-content-alt {
-    display: inline-block;
-    position: relative;
-    min-height: 1.5rem;
-    line-height: 1.5rem;
-    margin-left: 1.5rem;
-}
-
-.custom-for-check-icon-alt i {
-    position: absolute;
-    font-size: 0.6rem;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    opacity: 0;
-    transition: opacity ease-in 0.2s;
-}
-
-.custom-for-check-icon-alt::before {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    width: 1.3rem;
-    height: 1.3rem;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transform: translate(calc(-0.1rem - 2px), calc(-0.1rem - 2px));
-    border-radius: 4px;
-    border: 2px solid #007bff;
-    box-shadow: 0 0 5px #007bff;
-    transition: opacity ease-in 0.2s, box-shadow ease-in 0.2s;
-}
-
-/* Background Border Highlight */
-/* when focus */
-.hidden-default-check:focus + .custom-for-check-icon-alt::before {
-    opacity: 1;
-}
-/* when focus and checked */
-.hidden-default-check:focus:checked + .custom-for-check-icon-alt::before {
-    opacity: 1;
-}
-
-/* Toggle Checkmark */
-/* when checked */
-.hidden-default-check:checked + .custom-for-check-icon-alt i {
-    opacity: 1;
-}
-
-/* alternative style 2 */
-.custom-form-check-alt-2 {
-    display: inline-block;
-    position: relative;
-    min-height: 1.5rem;
-    line-height: 1.5rem;
-}
-
-.custom-form-check-alt-2:hover {
-    cursor: pointer;
-}
-
-.custom-form-check-alt-2.disabled:hover {
-    cursor: not-allowed;
-}
-
-.custom-for-check-icon-alt-2 {
-    display: block;
-    position: absolute;
-    width: 1.1rem;
-    height: 1.1rem;
-    top: 50%;
-    transform: translateY(-50%);
-    background: transparent;
-    border-radius: 4px;
-    border: 2px solid #000000;
-    transition: background-color ease-in 0.2s;
-}
-
-.custom-form-check-content-alt-2 {
-    display: inline-block;
-    position: relative;
-    min-height: 1.5rem;
-    line-height: 1.5rem;
-    margin-left: 1.5rem;
-}
-
-.custom-for-check-icon-alt-2 i {
-    position: absolute;
-    font-size: 0.6rem;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    opacity: 0;
-    transition: opacity ease-in 0.2s;
-}
-
-/* Background Border Highlight */
-/* when focus */
-.hidden-default-check:focus + .custom-for-check-icon-alt-2 {
-    background: #000000;
-}
-/* when focus and checked */
-.hidden-default-check:focus:checked + .custom-for-check-icon-alt-2 i {
+// Success Button Setting
+.btn-success {
     color: #fff;
-}
-/* when focus and checked */
-.hidden-default-check:focus:active + .custom-for-check-icon-alt-2 i {
-    background: #000000;
+    background-color: $success;
+    border: 1px solid $success;
+
+    &:hover,
+    &:active {
+        color: #fff;
+        background-color: $successDarker;
+        border-color: $successDarker;
+    }
 }
 
-/* Toggle Checkmark */
-/* when checked */
-.hidden-default-check:checked + .custom-for-check-icon-alt-2 i {
-    opacity: 1;
+// Warning Button Setting
+.btn-warning {
+    color: #fff;
+    background-color: $warning;
+    border: 1px solid $warning;
+
+    &:hover,
+    &:active {
+        color: #fff;
+        background-color: $warningDarker;
+        border-color: $warningDarker;
+    }
+}
+
+// Danger Button Setting
+.btn-danger {
+    color: #fff;
+    background-color: $danger;
+    border: 1px solid $danger;
+
+    &:hover,
+    &:active {
+        color: #fff;
+        background-color: $dangerDarker;
+        border-color: $dangerDarker;
+    }
+}
+
+/* =======================================================================
+ *                        Custom Form Checkbox
+ * -----------------------------------------------------------------------
+ * Description:    Fake the checkbox by using fontawesome icons,
+ *                 hidden the defualt the checkbox. It has two states:
+ *                  (a) :checked
+ *                  (b) :focus
+ *                 This is a general css rule, feel free to use differnt
+ *                 icons provided by fontawesome. We provided two examples
+ *                  (1) checkbox type
+ *                  (2) radio type
+ * -----------------------------------------------------------------------
+ * Ussage:         Must use the HTML template, or using the same nesting
+ *                 rule
+ *========================================================================
+ */
+
+.custom-form-check {
+    display: inline-block;
+    position: relative;
+    min-height: 1.5rem;
+    line-height: $fontLineHeight;
+    vertical-align: middle;
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    // when disabled
+    &.disabled {
+        color: $disabled;
+        cursor: not-allowed;
+
+        .custom-for-check-icon-alt {
+            border-color: $disabled;
+        }        
+    }
+
+    // No-animated Check Icon
+    .custom-form-check-icon {
+        display: inline-block;
+        position: relative;
+        margin-right: 0.25rem;
+        
+        .custom-form-check-icon-unchecked {
+            display: inline-block;
+            position: relative;
+            line-height: $fontLineHeight;
+
+            i {
+                line-height: $fontLineHeight;
+            }
+        }
+        
+        .custom-form-check-icon-checked {
+            position: absolute;
+            top: 0;
+            left: 0;
+            line-height: $fontLineHeight;
+            opacity: 0;
+            
+            i {
+                line-height: $fontLineHeight;
+            }         
+        }
+    }
+
+    // Animated Check Icon
+    .custom-for-check-icon-alt {
+        display: block;
+        position: absolute;
+        width: 1.1rem;
+        height: 1.1rem;
+        top: 50%;
+        transform: translateY(-50%);
+        background: transparent;
+        border-radius: 4px;
+        border: 2px solid #000;
+
+        // Set left margin only when sbling has .custom-for-check-icon-alt class
+        & + span.custom-form-check-content {
+            margin-left: 1.5rem;
+        }
+
+        // -------------- Insrt Custom Animation Style for UNCHECKED State ---------------
+        &.outter-glow {
+            &::before {
+                content: "";
+                display: inline-block;
+                position: absolute;
+                width: 1.3rem;
+                height: 1.3rem;
+                top: 0;
+                left: 0;
+                opacity: 0;
+                transform: translate(calc(-0.1rem - 2px), calc(-0.1rem - 2px));
+                border-radius: 4px;        
+                border: 2px solid $information;
+                box-shadow: 0 0 5px $information;
+                transition: opacity ease-in 0.2s, box-shadow ease-in 0.2s;
+            }
+        }
+
+        &.inner-fill {
+            // No css rule for unchecked state
+        }
+
+        i {
+            position: absolute;
+            font-size: 0.6rem;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            opacity: 0;
+            transition: opacity ease-in 0.2s;
+        }
+    }
+
+    .custom-form-check-content {
+        display: inline-block;
+        position: relative;
+        line-height: $fontLineHeight;
+    }
+
+    .hidden-default-check {
+        position: absolute;
+        left: 0.75rem;
+        pointer-events: none;
+        user-select: none;
+        opacity: 0;
+        z-index: -1;
+
+        // No-animated Check Icon
+        &:checked + span .custom-form-check-icon-unchecked {
+            opacity: 0;
+        }      
+        &:checked + span .custom-form-check-icon-checked {
+            opacity: 1;
+        }
+        &:focus + span .custom-form-check-icon-unchecked {
+            color: $information;
+        }    
+        &:focus:checked + span .custom-form-check-icon-checked {
+            color: $information;
+        }
+
+        // Animate Check Icon
+        // Toggle Checkmark
+        &:checked + .custom-for-check-icon-alt i {
+            opacity: 1;
+        }
+
+        // -------------- Insrt Custom Animation Style for CHECKED State ---------------
+        // ------ Style: Outter Glow --------
+        // when focus
+        &:focus + .outter-glow::before {
+            opacity: 1;
+        }
+        // when focus and checked
+        &:focus:checked + .outter-glow::before {
+            opacity: 1;
+        }
+
+        // ------ Style: Inner Fill --------
+        /* when focus */
+        &:focus + .inner-fill,
+        &:focus:active + .inner-fill {
+            background: #000;
+        }
+        /* when focus and checked */
+        &:focus:checked + .inner-fill i {
+            color: #fff;
+            background: #000;
+        }
+
+    }
 }
 
 
