--- a/scss/gridbox-grids.scss
+++ b/scss/gridbox-grids.scss
@@ -91,7 +91,7 @@
 @include gridRuleBuild($breakPoints, $deviceList);
 
 //build grid css rule - fixed width
-@include gridRuleBuild($breakPoints, $deviceList, $colNum);
+@include gridRuleBuild($breakPoints, $deviceList, $colNums);
 
 /* =======================================================================
  *                          Grids Alignment
