Add Navigation Bar Template

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -100,3 +100,12 @@ $deviceList: (
     'laptop':           'col-lap',
     'desktop':          'col-desk'
 );
+
+
+// /* =======================================================================
+//  *                          Girds Settings
+//  *========================================================================
+//  */
+
+
+$logoSize: 1.3rem;
